--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-international-phone": "^4.6.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
