--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dexie": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -38,7 +39,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.8.0",
     "styled-components": "^6.1.19",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
