--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-international-phone": "^4.6.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
