--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,10 +41,12 @@
     "recharts": "^2.8.0",
     "styled-components": "^6.1.19",
     "typescript": "^5.0.2",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.15",
     "concurrently": "^8.2.0",
